feat: alterando campo de filmes adicionando trailer ao inves de um backdrop
